# GPULife

./: AUTHORS  NOTICE  README.md
CUDA+ACC/: Makefile  applyRules_CUDA.cu  applyRules_OpenAcc.c  build.sh  fixCuda.sh  loadTile_CUDA.cu  main.c
OpenCl_GLtest/: CMakeCache.txt  CMakeLists.txt  GLtest.c  Makefile  Makefile.orig  OpenCL_GLtest  applyRules_OpenCL.c  build.sh  clKernel.cl  cmake_install.cmake  main.c
OpenCl_GLtest/OpenCL_GLtest.dSYM/Contents/: Info.plist
OpenCl_GLtest/OpenCL_GLtest.dSYM/Contents/Resources/DWARF/: OpenCL_GLtest
hybrid/: Makefile  applyRules.h  applyRules_CUDA.cu  applyRules_OpenAcc.c  applyRules_OpenCl.c  build.sh  gameOfLife_hybrid.c
testing/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.backup  applyRules_CUDA.cu  applyRules_OpenACC.c  applyRules_OpenMP4.c  build.sh  cmake_install.cmake  gameOfLife  loadTile_CUDA.cu  main.c
